--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@primevue/themes": "^4.0.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "pinia": "^2.1.7",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.0",
+    "sweetalert2": "^11.14.5",
     "vue": "^3.4.29",
     "vue-axios": "^3.5.2",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
